--- a/WpfApp1/View/MainWindow.xaml
+++ b/WpfApp1/View/MainWindow.xaml
@@ -26,38 +26,38 @@
 
         <!-- Principal -->
         <StackPanel Orientation="Horizontal" Margin="0,10" Grid.Row="0" HorizontalAlignment="Center">
-            <Label Content="Principal:" Width="120" FontSize="18" VerticalAlignment="Center" />
+            <Label Content="Principal:" Width="120" FontSize="18" VerticalAlignment="Center" Foreground="White"/>
             <TextBox Width="220"
                      Padding="8"
                      Background="#2e2e2e"
                      BorderBrush="#444"
                      Foreground="White"
                      BorderThickness="1"
-                     Text="{Binding Principal, UpdateSourceTrigger=PropertyChanged}" />
+                     Text="{Binding Principal, UpdateSourceTrigger=PropertyChanged,ValidatesOnDataErrors=True, NotifyOnValidationError=True}" />
         </StackPanel>
 
         <!-- Rate -->
         <StackPanel Orientation="Horizontal" Margin="0,10" Grid.Row="1" HorizontalAlignment="Center">
-            <Label Content="Rate (%):" Width="120" FontSize="18" VerticalAlignment="Center" />
+            <Label Content="Rate (%):" Width="120" FontSize="18" VerticalAlignment="Center" Foreground="White"/>
             <TextBox Width="220"
                      Padding="8"
                      Background="#2e2e2e"
                      BorderBrush="#444"
                      Foreground="White"
                      BorderThickness="1"
-                     Text="{Binding Rate, UpdateSourceTrigger=PropertyChanged}" />
+                     Text="{Binding Rate, UpdateSourceTrigger=PropertyChanged , ValidatesOnDataErrors=True, NotifyOnValidationError=True}" />
         </StackPanel>
 
         <!-- Time -->
         <StackPanel Orientation="Horizontal" Margin="0,10" Grid.Row="2" HorizontalAlignment="Center">
-            <Label Content="Time (years):" Width="120" FontSize="18" VerticalAlignment="Center"/>
+            <Label Content="Time (years):" Width="120" FontSize="18" VerticalAlignment="Center" Foreground="White"/>
             <TextBox Width="220"
                      Padding="8"
                      Background="#2e2e2e"
                      BorderBrush="#444"
                      Foreground="White"
                      BorderThickness="1"
-                     Text="{Binding Time, UpdateSourceTrigger=PropertyChanged}" />
+                     Text="{Binding Time, UpdateSourceTrigger=PropertyChanged,ValidatesOnDataErrors=True, NotifyOnValidationError=True}" />
         </StackPanel>
 
         <!-- Calculate Button -->
